--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,18 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        debugkey {
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+            storeFile file('C:/Users/chaeyk/.android/debug.keystore')
+            storePassword 'android'
+        }
+    }
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
-
     defaultConfig {
-        applicationId "com.example.chaeyk.googleplaytest"
+        applicationId "com.example.chaeyk.snsaccounttest"
         minSdkVersion 15
         targetSdkVersion 22
         versionCode 1
@@ -16,12 +23,16 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            signingConfig signingConfigs.debugkey
+        }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:22.2.0'
-    compile group: 'com.kakao.sdk', name: 'usermgmt', version: '1.1.10'
+    compile 'com.kakao.sdk:usermgmt:1.1.10'
+    compile 'com.google.android.gms:play-services:8.3.0'
 }
