--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
 
         <activity android:name="com.example.chaeyk.snsaccounttest.KakaoActivity" />
+        <activity android:name="com.example.chaeyk.snsaccounttest.GoogleActivity" />
 
         <meta-data android:name="com.kakao.sdk.AppKey" android:value="@string/kakao_app_key" />
     </application>
