--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.kakao.sdk:usermgmt:1.1.10'
     compile 'com.google.android.gms:play-services:8.3.0'
+    compile 'com.facebook.android:facebook-android-sdk:4.6.0'
 }
