--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile 'com.kakao.sdk:usermgmt:1.1.10'
     compile 'com.google.android.gms:play-services:8.3.0'
     compile 'com.facebook.android:facebook-android-sdk:4.6.0'
+    compile 'ch.acra:acra:4.6.2'
 }
